# semanticSlam

./: .gitattributes  CMakeLists.txt  build.sh  global_color.pcd  sitting_half.txt
CRF/: Frame.cc  Frame.h  MaskNet.cc  denseCRF.sh  gray2rgb.py  rgb2gray.py
Examples/Monocular/: mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: MaskSettings.yaml  rgbd_tum.cc
include/: Conversion.h  Frame.h  Frame.ori.h  KeyFrame.h  MaskNet.h  Model.h  ModelManager.h  ORBextractor.h  SegData.h  System.h  Tracking.h  pointcloudmapping.h  pointcloudmappingOri.h
masks/walking_xyz/classid/: 1341846313.592026.txt  1341846313.654184.txt  1341846313.686156.txt  1341846313.721918.txt  1341846313.753994.txt  1341846313.789969.txt  1341846313.822075.txt  1341846313.853928.txt  1341846313.890011.txt  1341846313.922055.txt  1341846313.957927.txt  1341846314.022042.txt
masks/walking_xyz/roi/: 1341846313.592026.txt  1341846313.654184.txt  1341846313.686156.txt  1341846313.721918.txt  1341846313.753994.txt  1341846313.789969.txt  1341846313.822075.txt  1341846313.853928.txt  1341846313.890011.txt  1341846313.922055.txt  1341846313.957927.txt  1341846313.990058.txt  1341846314.022042.txt
masks/walking_xyz_only_people/roi/: 1341846313.592026.txt  1341846313.654184.txt  1341846313.686156.txt  1341846313.721918.txt  1341846313.753994.txt  1341846313.789969.txt  1341846313.822075.txt  1341846313.853928.txt  1341846313.890011.txt  1341846313.922055.txt  1341846313.957927.txt  1341846313.990058.txt  1341846314.022042.txt  1341846314.057816.txt  1341846314.089801.txt  1341846314.122037.txt  1341846314.157989.txt  1341846314.190094.txt  1341846314.225969.txt  1341846314.257923.txt  1341846314.290052.txt  1341846314.325981.txt  1341846314.357905.txt  1341846314.389899.txt  1341846314.427905.txt  1341846314.493987.txt  1341846314.526085.txt  1341846314.558292.txt  1341846314.594085.txt  1341846314.626096.txt  1341846314.658455.txt  1341846314.694004.txt  1341846314.725910.txt  1341846314.761942.txt  1341846314.794030.txt  1341846314.826092.txt  1341846314.862145.txt  1341846314.894072.txt  1341846314.925969.txt  1341846314.961937.txt  (+738 more)
ori/: FrameDrawer.cc  Viewer.cc
result/sit_half/: KeyFrameTrajectory.txt.orb  result.txt
result/walking_xyz/: KeyFrameTrajectory.txt.orb  dyna+ds.txt  f3_walking_rgbd  result_people_1
src/: Frame.cc  Frame.ori.cc  FrameDrawer.cc  Geometry.cc  KeyFrame.cc  LoopClosing.cc  MaskNet.cc  Model.cc  ModelManager.cc  ORBextractor.cc  Optimizer.cc  SegData.cc  System.cc  Tracking.cc  pointcloudmapping.cc  pointcloudmappingOri.cc  segmentation.cc
src/python/: Check.py  MaskRCNN.py  coco.py  test.py  utils.py
walking_rgbd/: f3_walking_rgbd
